Do some code cleanup.